demo/all_ns_must_have_gatekeeper.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sRequiredLabel
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels: ["gatekeeper"]
