demo/bad_schema2.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sRequiredLabel
metadata:
  name: bad-schema
spec:
  match:
    kinds:
      apiGroups: ["*"]
      kinds: ["*"]
  parameters:
    labels: ["gato"]
